# one-time-secret

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose-tests.yaml  docker-compose.yaml  pyproject.toml
one_time_secret/: Dockerfile  entrypoint.sh  requirements.txt
one_time_secret/app/: crud.py  crypto.py  main.py  schemas.py  service.py
one_time_secret/database/: base.py  db.py  models.py
one_time_secret/database/migrations/: env.py
one_time_secret/database/migrations/versions/: 4dfd398a4622_first.py  66b2fdccdf07_second.py  6f5d424945ca_first.py  95c1ff31b692_add_table_secret.py  9dad310fa1fd_first.py
one_time_secret/database/models/: secret.py
tests/: conftest.py
tests/test_app_crud/: test_db_create_secret.py  test_db_delete_one_row.py  test_db_delete_outdated_secrets.py  test_db_get_one_row.py
tests/test_app_crypto/: test_decrypt_secret_phrase.py  test_encrypt_phrases.py  test_get_key.py  test_get_salt.py
tests/test_app_main/: test_create_secret.py  test_get_secret.py
tests/test_app_schemas/: test_schemas_create_secret.py  test_schemas_get_secret.py  test_schemas_secret_key.py  test_schemas_secret_phrase.py
tests/test_app_services/: test_current_datetime.py  test_generate_sercret_key.py  test_generate_ttl.py
