[tool.poetry]
name = "one-time-secret"
version = "0.1.0"
description = ""
authors = ["PavliukKonstantin <Pavliuk.Konstantin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
sqlalchemy = "^1.3.19"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
cryptography = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"
flake8-docstrings = "^1.5.0"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
